--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js; push-dir --dir=dist --branch-gh-pages --cleanup"
   },
   "dependencies": {
     "portal-vue": "^1.3.0",
@@ -59,6 +59,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "push-dir": "^0.4.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
     "semver": "^5.3.0",
