--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js; push-dir --dir=dist --branch-gh-pages --cleanup"
+    "build": "node build/build.js; push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "portal-vue": "^1.3.0",
